fixed content overflow on smaller screens

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -14,9 +14,9 @@ body {
 	font-family: 'Quattrocento', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 }
 body {
-	display: grid;
+
 	height: 100vh;
-	grid-template-rows: auto 1fr auto;
+
 	background-color: var(--secondary);
 }
 main {
@@ -77,7 +77,10 @@ pre {
 	padding: 1em;
 	margin: .5em 0;
 }
-
+header{
+max-width: 60em;
+margin: 0 auto;
+}
 /* Header Logo (style as h2) */
 header > em {
 	display: block;
@@ -212,79 +215,23 @@ text-decoration: none;
 
 /* nav menu */
 nav {
-font-family: 'Quattrocento', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-line-height: 1.6em;
-        font-size: 1.3em;
+  font-family: 'Quattrocento', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+  line-height: 1.6em;
+  font-size: 1.3em;
   background-color: #fff;
   padding: 0 1rem;
-  display: grid;
-  place-items: center;
 }
 nav > ul {
+display: flex;
+gap: 1rem;
+flex-wrap: wrap;
+justify-content: flex-start;
   list-style: none;
   margin: 0;
   padding: 0;
-  display: grid;
-  grid-auto-flow: column;
-}
-nav > ul > li > ul {
-  padding: 0;
-  margin: 0 0.5rem;
-  list-style: none;
+
 }
 
-nav > ul > li a,
-nav > ul > li .dropdown__title {
-  text-decoration: none;
-  text-align: center;
-  display: inline-block;
- 
-  font-size: 1.125rem;
-}
-nav > ul > li > a,
-nav > ul > li .dropdown__title {
-  padding: 1rem 0.5rem;
-}
-
-.dropdown {
-  position: relative;
-}
-.dropdown:hover .dropdown__menu,
-.dropdown:focus-within .dropdown__menu {
-  opacity: 1;
-  transform: rotateX(0) translateX(-50%);
-}
-.dropdown .dropdown__menu {
-  position: absolute;
-  background-color: #fff;
-  border-radius: 4px;
-  box-shadow: 0 0.15em 0.25em rgba(0, 0, 0, 0.25);
-  padding: 0.5em 0;
-  min-width: 15ch;
-  top: calc(100% - 0.25rem);
-  left: 50%;
-  transform: rotateX(-90deg) translateX(-50%);
-  transform-origin: top center;
-  opacity: 0.3;
-  transition: 280ms all 280ms ease-out;
-}
-.dropdown .dropdown__menu a {
-  color: #444;
-  display: block;
-  padding: 0.5em;
-}
-.dropdown .dropdown__title {
-  display: inline-flex;
-  align-items: center;
-  pointer-events: none;
-}
-.dropdown .dropdown__title:after {
-  content: "";
-  border: 0.35rem solid transparent;
-  border-top-color: rgba(0, 0, 255, 0.45);
-  margin-left: 0.25em;
-  transform: translateY(0.15em);
-}
 /* nav menu end */
 ul {
   margin: 0;
@@ -294,10 +241,6 @@ ul {
 
 
 ul li {
-  display: grid;
-  grid-template-columns: 0 1fr;
-  grid-gap: 1.75em;
-  align-items: start;
   font-size: 1.25rem;
   line-height: 2;
 }
